--- a/.github/flux de travail/c-cpp.yml
+++ b/.github/flux de travail/c-cpp.yml
@@ -11,7 +11,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: compilation and execution server
       run: cd server
-    - run: make run-server
+    - run: gcc pserver.c -o pserver
+    - run: ./pserver
     - name: compilation and execution client
-      run: client
-    - run: make run-cli file=peg
+    - run: gcc pclient.c -o pclient
+    - run: ./pclient peg 0.0.0.0
